- include network interface name udev rule (mga#10947)
- sync with kernel-3.10
- sync with kernel-3.9
- add 'dd_rescue' to uCdrakx
- ensure /dev is bind mounted before re-installing bootloader (mga#10107)

Version 2.0 - 24 April 2013, by Per Øyvind Karlsen

- move firmware into separate initrd
- add framebuffer driver modules
- add /etc/fb.modes
- add a script to simplfy grabbing of journal logs for bug reports
- include persistant storage udev rules needed to see new uuids
- use Moondrake linux_logo splash during boot
- rebrand to "Moondrake"
- include vmvgfx module in order for us to get framebuffer support under vmware
  during install
- decompress individual kernel modules if they're compressed before archiving
- fix loading modules with "-" in their names (mga#9242)
- update list_modules for xen dom0 and virtio support (#9242)
- use grub2 with system theme
- mount /sys/kernel/debug from fstab
- automatically pick up stage1 binaries from checkout if found
- rename "Rescue mode" to "Micro environment" as it's now more of a multi
  purpose environment
- write new cd generation tool from scratch, removing the need for bcd
- rewrite 'make_boot_img' in shell script
- switch from isolinux to grub2
- drop silly install of images to /var/lib/tftpboot on local system
- drop dead all.img image, no longer needed that isos are hybrid
- merge rescue disk together with binaries from first stage loader
- use C version of /sbin/busybox hardlinked against stage1 multi purpose binary
- offer the ability to boot from harddisk also for boot.iso
- load module descriptions directly from modules rather than distributing
  them in pregenerated 'modules.description' file
- compile serial_probe source directly into stage1 binary

Version 1.62 -  9 September 2012, by Per Øyvind Karlsen

- add initial stuff for supporting mdev as udev replacement
- might as well install probe-modules as it's merely a hardlink to same 
  'stage1' binary as the rest