@@ -135,8 +135,11 @@
   lspci
 
   rpm
-  db52_verify
   db52_archive
+  db52_dump
+  db52_load
+  db52_recover
+  db52_verify
   rpm2cpio
 
   hexedit
